WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53372
JavaScriptCoreUseJIT environment variable broken
https://bugs.webkit.org/show_bug.cgi?id=53372
Summary
JavaScriptCoreUseJIT environment variable broken
Cameron Zwarich (cpst)
Reported
2011-01-29 00:54:04 PST
The code just checks the return value of getenv(), which is wrong.
Attachments
Proposed patch
(1.43 KB, patch)
2011-01-29 00:55 PST
,
Cameron Zwarich (cpst)
oliver
: review+
zwarich
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2011-01-29 00:55:40 PST
Created
attachment 80554
[details]
Proposed patch
Cameron Zwarich (cpst)
Comment 2
2011-01-29 12:19:00 PST
Fixed in
r77065
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug