JavaScriptCoreUseJIT environment variable broken https://bugs.webkit.org/show_bug.cgi?id=53372

Reviewed by Oliver Hunt.

* runtime/JSGlobalData.cpp:
(JSC::JSGlobalData::JSGlobalData): Check the actual value in the string returned
by getenv() rather than just doing a NULL check on the return value.


Canonical link: https://commits.webkit.org/67218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77065 268f45cc-cd09-0410-ab3c-d52691b4dbfc